// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcToaster > messages prop > should not render the toaster if no props are passed 1`] = `
<div
  class="ec-toaster"
>
  <transition-group-stub
    appear="false"
    class="ec-toaster__list"
    css="true"
    data-test="ec-toaster__list"
    name="ec-toaster-items-transition"
    persisted="false"
    tag="ul"
  >
    
    
  </transition-group-stub>
</div>
`;

exports[`EcToaster > messages prop > should render a toaster if the messages prop is passed 1`] = `
<div
  class="ec-toaster"
>
  <transition-group-stub
    appear="false"
    class="ec-toaster__list"
    css="true"
    data-test="ec-toaster__list"
    name="ec-toaster-items-transition"
    persisted="false"
    tag="ul"
  >
    
    <li
      class="ec-toaster__item"
      data-test="ec-toaster__item"
      style="top: 0px;"
    >
      <div
        class="ec-alert ec-toaster__item-content ec-alert--error ec-alert--is-responsive"
        data-test="ec-alert"
      >
        <a
          class="ec-alert__dismiss-icon ec-alert__dismiss-icon--error"
          data-test="ec-alert__dismiss-icon"
          href="#"
        >
          <svg
            class="ec-icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </a>
        <svg
          class="ec-icon ec-alert__icon ec-alert__icon--alert-has-subtitle"
        >
          <use
            xlink:href="#ec-simple-error"
          />
        </svg>
        <div
          class="ec-alert__body"
        >
          <div
            class="ec-alert__content"
          >
            
            <div
              class="ec-alert__title ec-alert__title--error"
              data-test="ec-alert__title"
            >
              random
            </div>
            <div
              class="ec-alert__subtitle ec-alert__subtitle--error"
              data-test="ec-alert__subtitle"
            >
              random
            </div>
            
          </div>
          <!--v-if-->
        </div>
      </div>
    </li>
    <li
      class="ec-toaster__item"
      data-test="ec-toaster__item"
      style="top: 0px;"
    >
      <div
        class="ec-alert ec-toaster__item-content ec-alert--success ec-alert--is-responsive"
        data-test="ec-alert"
      >
        <a
          class="ec-alert__dismiss-icon ec-alert__dismiss-icon--success"
          data-test="ec-alert__dismiss-icon"
          href="#"
        >
          <svg
            class="ec-icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </a>
        <svg
          class="ec-icon ec-alert__icon ec-alert__icon--alert-has-subtitle"
        >
          <use
            xlink:href="#ec-simple-check"
          />
        </svg>
        <div
          class="ec-alert__body"
        >
          <div
            class="ec-alert__content"
          >
            
            <div
              class="ec-alert__title ec-alert__title--success"
              data-test="ec-alert__title"
            >
              random
            </div>
            <div
              class="ec-alert__subtitle ec-alert__subtitle--success"
              data-test="ec-alert__subtitle"
            >
              random
            </div>
            
          </div>
          <!--v-if-->
        </div>
      </div>
    </li>
    <li
      class="ec-toaster__item"
      data-test="ec-toaster__item"
      style="top: 0px;"
    >
      <div
        class="ec-alert ec-toaster__item-content ec-alert--info ec-alert--is-responsive"
        data-test="ec-alert"
      >
        <a
          class="ec-alert__dismiss-icon ec-alert__dismiss-icon--info"
          data-test="ec-alert__dismiss-icon"
          href="#"
        >
          <svg
            class="ec-icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </a>
        <svg
          class="ec-icon ec-alert__icon ec-alert__icon--alert-has-subtitle"
        >
          <use
            xlink:href="#ec-simple-info"
          />
        </svg>
        <div
          class="ec-alert__body"
        >
          <div
            class="ec-alert__content"
          >
            
            <div
              class="ec-alert__title ec-alert__title--info"
              data-test="ec-alert__title"
            >
              random
            </div>
            <div
              class="ec-alert__subtitle ec-alert__subtitle--info"
              data-test="ec-alert__subtitle"
            >
              random
            </div>
            
          </div>
          <!--v-if-->
        </div>
      </div>
    </li>
    <li
      class="ec-toaster__item"
      data-test="ec-toaster__item"
      style="top: 0px;"
    >
      <div
        class="ec-alert ec-toaster__item-content ec-alert--warning ec-alert--is-responsive"
        data-test="ec-alert"
      >
        <a
          class="ec-alert__dismiss-icon ec-alert__dismiss-icon--warning"
          data-test="ec-alert__dismiss-icon"
          href="#"
        >
          <svg
            class="ec-icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-close"
            />
          </svg>
        </a>
        <svg
          class="ec-icon ec-alert__icon ec-alert__icon--alert-has-subtitle"
        >
          <use
            xlink:href="#ec-simple-error"
          />
        </svg>
        <div
          class="ec-alert__body"
        >
          <div
            class="ec-alert__content"
          >
            
            <div
              class="ec-alert__title ec-alert__title--warning"
              data-test="ec-alert__title"
            >
              random
            </div>
            <div
              class="ec-alert__subtitle ec-alert__subtitle--warning"
              data-test="ec-alert__subtitle"
            >
              random
            </div>
            
          </div>
          <!--v-if-->
        </div>
      </div>
    </li>
    
  </transition-group-stub>
</div>
`;

exports[`EcToaster > should not contain initially a class of "ec-toaster__item--swipe-active" 1`] = `
<li
  class="ec-toaster__item"
  data-test="ec-toaster__item"
  style="top: 0px;"
>
  <div
    class="ec-alert ec-toaster__item-content ec-alert--success ec-alert--is-responsive"
    data-test="ec-alert"
  >
    <a
      class="ec-alert__dismiss-icon ec-alert__dismiss-icon--success"
      data-test="ec-alert__dismiss-icon"
      href="#"
    >
      <svg
        class="ec-icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </a>
    <svg
      class="ec-icon ec-alert__icon ec-alert__icon--alert-has-subtitle"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
    <div
      class="ec-alert__body"
    >
      <div
        class="ec-alert__content"
      >
        
        <div
          class="ec-alert__title ec-alert__title--success"
          data-test="ec-alert__title"
        >
          This is the title
        </div>
        <div
          class="ec-alert__subtitle ec-alert__subtitle--success"
          data-test="ec-alert__subtitle"
        >
          This is the subtitle
        </div>
        
      </div>
      <!--v-if-->
    </div>
  </div>
</li>
`;
